REA-458: Add click listener for transition events

--- a/docs/features/Transition-Events.mdx
+++ b/docs/features/Transition-Events.mdx
@@ -21,48 +21,55 @@ By default, the <TypeLink type="ProcessMining" /> component provides bluish tran
 
 <Playground
   code={`
- function App() {
-   const [showTransitionEvents, setShowTransitionEvents] = useState(true);
-   const [timestamp, setTimestamp] = useState(5);
-   const maxCaseId = 100;
+function App() {
+  const [showTransitionEvents, setShowTransitionEvents] = useState(true);
+  const [timestamp, setTimestamp] = useState(5);
+  const [clickedEventIds, setClickedEventIds] = useState([])
+  const maxCaseId = 100;
 
-   return (
-     <ProcessMining
-       eventLog={data}
-       timestamp={timestamp}
-       showTransitionEvents={showTransitionEvents}
-       transitionEventStyling={(previousEvent, _) => ({
-         size: 15,
-         hue: (parseInt(previousEvent.caseId as string) / maxCaseId) * 360,
-       })}
-       showHeatmap={false}
-     >
-       <div className="options">
-         <div>
-           <span>Timestamp</span>
-           <input
-             type="range"
-             min={0}
-             max={30}
-             onInput={(e) => {
-               setTimestamp(parseFloat((e.target as HTMLInputElement).value));
-             }}
-             value={timestamp}
-           />
-         </div>
-         <div>
-           <input
-             type="checkbox"
-             onChange={(event) => setShowTransitionEvents(event.target.checked)}
-             checked={showTransitionEvents}
-           />
-           <span>Hide Transition Events</span>
-         </div>
-       </div>
-     </ProcessMining>
-   );
- }
-
+  return (
+    <ProcessMining
+      eventLog={data}
+      timestamp={timestamp}
+      showTransitionEvents={showTransitionEvents}
+      transitionEventStyling={(previousEvent, _) => ({
+        size: 15,
+        hue: (parseInt(previousEvent.caseId as string) / maxCaseId) * 360,
+      })}
+      onTransitionEventsClick={(caseIds) => setClickedEventIds(caseIds)}
+      showHeatmap={false}
+    >
+      <div className="options">
+        <div>
+          <span>Timestamp</span>
+          <input
+            type="range"
+            min={0}
+            max={30}
+            onInput={(e) => {
+              setTimestamp(parseFloat((e.target as HTMLInputElement).value));
+            }}
+            value={timestamp}
+          />
+        </div>
+        <div>
+          <input
+            type="checkbox"
+            onChange={(event) => setShowTransitionEvents(event.target.checked)}
+            checked={showTransitionEvents}
+          />
+          <span>Hide Transition Events</span>
+        </div>
+      </div>
+      {clickedEventIds.length > 0 && <div className="ids-display">
+        <div>
+          <span>Transition Events: </span>
+          <span>{clickedEventIds.join(", ")}</span>
+        </div>
+      </div>}
+    </ProcessMining>
+  );
+}
 `}
   data={`[
   { caseId: 0, activity: 'Start', timestamp: 8.383561495922297, duration: 0.0006804154279300233 },
@@ -2058,15 +2065,23 @@ By default, the <TypeLink type="ProcessMining" /> component provides bluish tran
 ]`}
   css={`
 .options {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    display: flex;
-    gap: 1em;
-    flex-direction: column;
-    background-color: #393939;
-    padding: 10px;
-    border-radius: 10px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  display: flex;
+  gap: 1em;
+  flex-direction: column;
+  background-color: #393939;
+  padding: 10px;
+  border-radius: 10px;
+}
+.ids-display {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: #393939;
+  padding: 10px;
+  border-radius: 10px;
 }
 `}
 />
