REA-461, REA-462: adjust popup positions to the new names

--- a/docs/features/Popup.mdx
+++ b/docs/features/Popup.mdx
@@ -40,7 +40,7 @@ function App () {
     <ProcessMining
       eventLog={data}
       timestamp={5}
-      popupPosition="north"
+      popupPosition="top"
       renderPopup={CustomPopupComponent}
     ></ProcessMining>
   )
